--- a/UserProfiles/templates/profile/profile.html
+++ b/UserProfiles/templates/profile/profile.html
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="profile-img">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/avatars/8.webp" class="rounded-circle mb-3"
+                    <img src="https://mdbcdn.b-cdn.net/img/new/avatars/8.webp" class="rounded-circle"
                          alt="Avatar"/>
                     <!--                            <div class="file btn btn-lg btn-primary">-->
                     <!--                                Change Photo-->
