--- a/WishLists/templates/friendsLists.html
+++ b/WishLists/templates/friendsLists.html
@@ -1,74 +1,80 @@
 {% extends "main/base.html" %}
 
 {% block content %}
-<div class="event-schedule-area-two bg-color pad100">
-    <div class="container">
-        <!-- row end-->
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="tab-content" id="myTabContent">
-                    <div class="tab-pane fade active show" id="home" role="tabpanel">
-                        <div class="table-responsive">
-                            {% if listy %}
-                            <table class="table">
-                                <thead>
-                                <tr>
-                                    <th class="text-center">Data utworzenia</th>
-                                    <th class="text-center">Avatar</th>
-                                    <th class="text-center">Właściciel</th>
-                                    <th class="text-center">Tytuł listy</th>
-                                    <th class="text-center">Opis</th>
-                                    <th class="text-center">Ilość pozycji</th>
-                                    <th class="text-center">Zobacz listę</th>
-                                </tr>
-                                </thead>
+<h1 class="infoListyZnajomych">
+    <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor" class="bi bi-card-checklist"
+         viewBox="0 0 16 16">
+        <path d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2z"/>
+        <path d="M7 5.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0M7 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0"/>
+    </svg>
+    Listy znajomych
+</h1>
+<div class="event-schedule-area-two listyZnajomych">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="tab-content" id="myTabContent">
+                <div class="table-responsive">
+                    {% if listy %}
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <th class="text-center col-1 align-middle">Utworzono</th>
+                            <th class="text-center col-1 align-middle">Avatar</th>
+                            <th class="text-center col-2 align-middle">Właściciel</th>
+                            <th class="text-center col-2 align-middle">Tytuł listy</th>
+                            <th class="text-center col-3 align-middle">Opis</th>
+                            <th class="text-center col-2 align-middle">Ilość prezentów</th>
+                            <th class="text-center col-1 align-middle">Zobacz</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for lista in listy %}
+                        <tr class="inner-box">
+                            <td>
+                                <div class="event-date">
+                                    <span>{{lista.dataUtworzenia|date:"d.m.Y" }}</span>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="avatar-img">
+                                    <img src="https://mdbcdn.b-cdn.net/img/new/avatars/8.webp" class="rounded-circle"
+                                         alt="Avatar"/>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="event-wrap text-center">
+                                    <h4><a href="/profile/{{ lista.loginWlasciciel }} ">{{ lista.loginWlasciciel }}</a>
+                                    </h4>
+                                </div>
+                                <div class="text-center">
+                                    <span>Imie nazwisko</span>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="text-center">
+                                    <h5>{{ lista.tytul }}</h5>
+                                </div>
 
+                            </td>
+                            <td>
+                                <div class="text-center">
+                                    <span>{{ lista.opis }}</span>
+                                </div>
+                            </td>
 
-                                <tbody>
-                                {% for lista in listy %}
-                                <tr class="inner-box">
-                                    <td>
-                                        <div class="event-date">
-                                            <span>{{lista.dataUtworzenia|date:"d.m.Y" }}</span>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="event-img">
-                                            <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt=""/>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="event-wrap">
-                                            <h4><a href="/profile/{{ lista.loginWlasciciel }} ">{{ lista.loginWlasciciel }}</a></h4>
-                                        </div>
-                                        <div class="organizers">
-                                            <span>Imie nazwisko</span>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="categories">
-                                            <span>{{ lista.tytul }}</span>
-                                        </div>
-
-                                    </td>
-                                    <td>
-                                        <div class="time">
-                                            <span>{{ lista.opis }}</span>
-                                        </div>
-                                    </td>
-
-                                    <td>
-                                        <div class="time">
-                                            <span>Ilość pozycji: {{ lista.ilosc_pozycji }}</span>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="primary-btn">
+                            <td>
+                                <div class="text-center">
+                                    <span>Ilość pozycji: {{ lista.ilosc_pozycji }}</span>
+                                </div>
+                            </td>
+                            <td class="align-middle">
+                                <div class="przyciskiListyZnajomych d-flex align-items-center justify-content-center">
+                                    <div class="row">
+                                        <div class="col-sm-12">
                                             <form method="POST" action="{% url 'specificList' lista.id %}">
                                                 {% csrf_token %}
-                                                <button id="poNajechaniuYellow">
-                                                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"
-                                                         fill="currentColor"
+                                                <button id="poNajechaniuPurple">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
                                                          class="bi bi-card-text" viewBox="0 0 16 16">
                                                         <path d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2z"/>
                                                         <path d="M3 5.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5M3 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 8m0 2.5a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5"/>
@@ -76,28 +82,27 @@
                                                 </button>
                                             </form>
                                         </div>
-                                    </td>
-                                </tr>
-                                {% endfor %}
+                                     </div>
+                                </div>
+                            </td>
+                        </tr>
+                        {% endfor %}
 
-                                </tbody>
-                            </table>
+                        </tbody>
+                    </table>
 
 
-                            {% else %}
-                            <div id="brakList">
-                                <h1>Brak dostępnych list.</h1>
-                                <h1>Dodaj znajomych by zobaczyć ich listy!</h1>
-                                <br>
-                            </div>
-                            {% endif %}
-                        </div>
+                    {% else %}
+                    <div id="brakList">
+                        <h1>Brak dostępnych list.</h1>
+                        <h1>Dodaj znajomych by zobaczyć ich listy!</h1>
+                        <br>
                     </div>
+                    {% endif %}
                 </div>
             </div>
-            <!-- /col end-->
         </div>
-        <!-- /row end-->
     </div>
+
 </div>
 {% endblock %}
