--- a/static/css/style.css
+++ b/static/css/style.css
@@ -164,8 +164,8 @@ nav{
     margin-top: 8%;
 }
 
-#poNajechaniuYellow:hover{
-    color: #FFC436;
+#poNajechaniuPurple:hover{
+    color: purple;
 }
 
 #poNajechaniuGreen:hover{
@@ -206,13 +206,10 @@ nav{
     margin-top: 5%;
     margin-bottom: 2%;
 }
-#poNajechaniuRed:hover{
-    color: red;
-}
 
 #przyciskiListy button{
     border: none;
-    background-color: #EFFDFF !important;
+    background-color: white !important;
 }
 .trashRight{
     float: right;
@@ -498,127 +495,12 @@ header.masthead .bg-circle-4 {
     color: white;
 }
 
-.event-schedule-area .tab-area .nav-tabs {
-    border-bottom: inherit;
+.listyZnajomych table{
+    width: 100% !important;
 }
 
-.event-schedule-area .tab-area .nav {
-    border-bottom: inherit;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    margin-top: 80px;
-}
-
-.event-schedule-area .tab-area .nav-item {
-    margin-bottom: 75px;
-}
-.event-schedule-area .tab-area .nav-item .nav-link {
-    text-align: center;
-    font-size: 22px;
-    color: #333;
-    font-weight: 600;
-    border-radius: inherit;
-    border: inherit;
-    padding: 0px;
-    text-transform: capitalize !important;
-}
-.event-schedule-area .tab-area .nav-item .nav-link.active {
-    color: #4125dd;
-    background-color: transparent;
-}
-
-.event-schedule-area .tab-area .tab-content .table {
-    margin-bottom: 0;
-    width: 80%;
-}
-.event-schedule-area .tab-area .tab-content .table thead td,
-.event-schedule-area .tab-area .tab-content .table thead th {
-    border-bottom-width: 1px;
-    font-size: 20px;
-    font-weight: 600;
-    color: #252525;
-}
-.event-schedule-area .tab-area .tab-content .table td,
-.event-schedule-area .tab-area .tab-content .table th {
-    border: 1px solid #b7b7b7;
-    padding-left: 30px;
-}
-.event-schedule-area .tab-area .tab-content .table tbody th .heading,
-.event-schedule-area .tab-area .tab-content .table tbody td .heading {
-    font-size: 16px;
-    text-transform: capitalize;
-    margin-bottom: 16px;
-    font-weight: 500;
-    color: #252525;
-    margin-bottom: 6px;
-}
-.event-schedule-area .tab-area .tab-content .table tbody th span,
-.event-schedule-area .tab-area .tab-content .table tbody td span {
-    color: #4125dd;
-    font-size: 18px;
-    text-transform: uppercase;
-    margin-bottom: 6px;
-    display: block;
-}
-.event-schedule-area .tab-area .tab-content .table tbody th span.date,
-.event-schedule-area .tab-area .tab-content .table tbody td span.date {
-    color: #656565;
-    font-size: 14px;
-    font-weight: 500;
-    margin-top: 15px;
-}
-.event-schedule-area .tab-area .tab-content .table tbody th p {
-    font-size: 14px;
-    margin: 0;
-    font-weight: normal;
-}
-
-.event-schedule-area-two .section-title .title-text h2 {
+.event-schedule-area-two .section-title .title-text h4 {
     margin: 0px 0 15px;
-}
-
-.event-schedule-area-two ul.custom-tab {
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    border-bottom: 1px solid #dee2e6;
-    margin-bottom: 30px;
-}
-.event-schedule-area-two ul.custom-tab li {
-    margin-right: 70px;
-    position: relative;
-}
-.event-schedule-area-two ul.custom-tab li a {
-    color: #252525;
-    font-size: 25px;
-    line-height: 25px;
-    font-weight: 600;
-    text-transform: capitalize;
-    padding: 35px 0;
-    position: relative;
-}
-.event-schedule-area-two ul.custom-tab li a:hover:before {
-    width: 100%;
-}
-.event-schedule-area-two ul.custom-tab li a:before {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    content: "";
-    background: #4125dd;
-    width: 0;
-    height: 2px;
-    -webkit-transition: all 0.4s;
-    -o-transition: all 0.4s;
-    transition: all 0.4s;
-}
-.event-schedule-area-two ul.custom-tab li a.active {
-    color: #4125dd;
 }
 
 .event-schedule-area-two .primary-btn {
@@ -626,12 +508,10 @@ header.masthead .bg-circle-4 {
 }
 
 .event-schedule-area-two .tab-content .table {
-    -webkit-box-shadow: 0 1px 30px rgba(0, 0, 0, 0.1);
-    box-shadow: 0 1px 30px rgba(0, 0, 0, 0.1);
     margin-bottom: 0;
 }
 .event-schedule-area-two .tab-content .table thead {
-    background-color: #007bff;
+    background-color: #023E8A;
     color: #fff;
     font-size: 20px;
 }
@@ -651,11 +531,10 @@ header.masthead .bg-circle-4 {
     vertical-align: middle;
 }
 .event-schedule-area-two .tab-content .table tbody tr td .event-date {
-    color: #252525;
     text-align: center;
 }
 .event-schedule-area-two .tab-content .table tbody tr td .event-date span {
-    font-size: 50px;
+    font-size: 20px;
     line-height: 50px;
     font-weight: normal;
 }
@@ -663,63 +542,17 @@ header.masthead .bg-circle-4 {
     padding: 30px 20px;
     vertical-align: middle;
 }
-.event-schedule-area-two .tab-content .table tbody tr td .r-no span {
-    color: #252525;
-}
-.event-schedule-area-two .tab-content .table tbody tr td .event-wrap h3 a {
+
+.event-schedule-area-two .tab-content .table tbody tr td .event-wrap h4 a {
     font-size: 20px;
     line-height: 20px;
     color: #cf057c;
-    -webkit-transition: all 0.4s;
-    -o-transition: all 0.4s;
-    transition: all 0.4s;
+    text-decoration: none;
 }
-.event-schedule-area-two .tab-content .table tbody tr td .event-wrap h3 a:hover {
+.event-schedule-area-two .tab-content .table tbody tr td .event-wrap h4 a:hover {
     color: #4125dd;
 }
-.event-schedule-area-two .tab-content .table tbody tr td .event-wrap .categories {
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-    margin: 10px 0;
-}
-.event-schedule-area-two .tab-content .table tbody tr td .event-wrap .categories a {
-    color: #252525;
-    font-size: 16px;
-    margin-left: 10px;
-    -webkit-transition: all 0.4s;
-    -o-transition: all 0.4s;
-    transition: all 0.4s;
-}
-.event-schedule-area-two .tab-content .table tbody tr td .event-wrap .categories a:before {
-    content: "\f07b";
-    font-family: fontawesome;
-    padding-right: 5px;
-}
-.event-schedule-area-two .tab-content .table tbody tr td .event-wrap .time span {
-    color: #252525;
-}
-.event-schedule-area-two .tab-content .table tbody tr td .event-wrap .organizers {
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-    margin: 10px 0;
-}
-.event-schedule-area-two .tab-content .table tbody tr td .event-wrap .organizers a {
-    color: #4125dd;
-    font-size: 16px;
-    -webkit-transition: all 0.4s;
-    -o-transition: all 0.4s;
-    transition: all 0.4s;
-}
-.event-schedule-area-two .tab-content .table tbody tr td .event-wrap .organizers a:hover {
-    color: #4125dd;
-}
-.event-schedule-area-two .tab-content .table tbody tr td .event-wrap .organizers a:before {
-    content: "\f007";
-    font-family: fontawesome;
-    padding-right: 5px;
-}
+
 .event-schedule-area-two .tab-content .table tbody tr td .primary-btn {
     margin-top: 0;
     text-align: center;
@@ -728,4 +561,40 @@ header.masthead .bg-circle-4 {
     width: 100px;
     height: 100px;
     border-radius: 8px;
+}
+
+.listyZnajomych{
+    box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
+    margin-bottom: 3%;
+    margin-left: 3%;
+    margin-right: 3%;
+}
+
+.avatar-img{
+    text-align: center;
+}
+
+.avatar-img img{
+    width: 80%;
+    height: 80%;
+}
+
+.przyciskiListyZnajomych{
+    text-align: center;
+}
+
+.przyciskiListyZnajomych button{
+    border: none;
+    background-color: white !important;
+    margin-top: 8%;
+}
+
+.infoListyZnajomych{
+    text-align: center;
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
+
+td .text-center h5{
+    margin-bottom: 0px;
 }
