--- a/WishLists/templates/friendsLists.html
+++ b/WishLists/templates/friendsLists.html
@@ -1,5 +1,5 @@
 {% extends "main/base.html" %}
-
+{% load static %}
 {% block content %}
 <h1 class="infoListyZnajomych">
     <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor" class="bi bi-card-checklist"
@@ -37,8 +37,14 @@
                             </td>
                             <td>
                                 <div class="avatar-img">
-                                    <img src="https://mdbcdn.b-cdn.net/img/new/avatars/8.webp" class="rounded-circle"
+                                    {% if lista.loginWlasciciel.profiluzytkownika.avatar %}
+                                    <img src="{% static 'avatars/'%}{{ lista.loginWlasciciel.profiluzytkownika.avatar }}"
+                                         class="rounded-circle"
                                          alt="Avatar"/>
+                                    {% else %}
+                                    <img src="{% static 'avatars/default_profile_pic.jpg'%}" class="rounded-circle"
+                                         alt="Avatar"/>
+                                    {% endif %}
                                 </div>
                             </td>
                             <td>
@@ -47,7 +53,7 @@
                                     </h4>
                                 </div>
                                 <div class="text-center">
-                                    <span>Imie nazwisko</span>
+                                    <span>{{ lista.loginWlasciciel.first_name }} {{ lista.loginWlasciciel.last_name }}</span>
                                 </div>
                             </td>
                             <td>
@@ -74,7 +80,8 @@
                                             <form method="POST" action="{% url 'specificList' lista.id %}">
                                                 {% csrf_token %}
                                                 <button id="poNajechaniuPurple">
-                                                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"
+                                                         fill="currentColor"
                                                          class="bi bi-card-text" viewBox="0 0 16 16">
                                                         <path d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2z"/>
                                                         <path d="M3 5.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5M3 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 8m0 2.5a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5"/>
@@ -82,7 +89,7 @@
                                                 </button>
                                             </form>
                                         </div>
-                                     </div>
+                                    </div>
                                 </div>
                             </td>
                         </tr>
